--- a/static/index.html
+++ b/static/index.html
@@ -114,8 +114,7 @@
 
 ---
 
-* Based on [Michael Gratton's Scratchpad](http://mjog.vee.net/latex-scratchpad/),
-released under the [GNU AGPL v3](http://www.gnu.org/licenses/agpl.html)
+* Based on [Michael Gratton's Scratchpad](http://mjog.vee.net/latex-scratchpad/)
 * Made by [Ezequiel Alvarez](github.com/alvare/latexpad) with [Servant](http://haskell-servant.readthedocs.io/)
 
 $$ \sum\limits_{i=1}^{n}{i^2} $$</textarea>
