--- a/static/index.html
+++ b/static/index.html
@@ -82,7 +82,7 @@
 
     #title {
       color: #555;
-      margin-top: 0;
+      margin: 0;
       padding: 16px;
     }
 
@@ -93,7 +93,7 @@
 </head>
 <body>
     <div id="display">
-        <h1 id="title">
+        <h1 class="page-header" id="title">
             LaTeXpad
             <button id="copy" class="pull-right btn btn-default"
                     data-toggle="tooltip" data-placement="bottom"
