--- a/static/index.html
+++ b/static/index.html
@@ -65,7 +65,7 @@
       box-sizing: border-box;
       width: 100%;
       margin: 0;
-      padding: 0 16px;
+      padding: 16px;
     }
 
     #input {
