--- a/static/index.html
+++ b/static/index.html
@@ -78,6 +78,7 @@
         <span id="share-link"></span>
     </h1>
 
+<div class="container">
     <div class="row">
         <div class="split-panel col-md-6">
             <div id="output"></div>
@@ -86,6 +87,7 @@
             <div id="input"></div>
         </div>
     </div>
+</div>
 
     <footer id="footer">
         <div class="container">
