--- a/static/index.html
+++ b/static/index.html
@@ -20,9 +20,14 @@
 
 -->
 
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>LaTeX Pad</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css" />
     <link rel="stylesheet" href="style.css">
@@ -52,8 +57,7 @@
         <button id="save" class="btn btn-primary"
                 data-loading-text="Saving...">
             Save</button>
-        <span id="share-link" class="message"></span>
-        <span id="error" class="message text-danger"></span>
+        <span id="message" class="message"></span>
     </h1>
 
 <div class="container">
