--- a/static/index.html
+++ b/static/index.html
@@ -80,11 +80,12 @@
     </footer>
 
     <textarea id="proforma" class="hidden">
+$$ \sum\limits_{i=1}^{n}{i^2} $$
+
 * Type on the right, then click `Save` to generate an URL
 * Text is [Markdown](http://daringfireball.net/projects/markdown/) formatted
 * Mathematics is $ \LaTeX $ formatted using [MathJax](http://www.mathjax.org/)
-
-$$ \sum\limits_{i=1}^{n}{i^2} $$
+* Useful links: [Math symbols](https://en.wikibooks.org/wiki/LaTeX/Mathematics) | [Detexify](http://detexify.kirelabs.org/classify.html)
 
 ---
 
